some improvemnt on wesite, and add doctor list page

--- a/Clinic Management website/Clinic Management website/Views/Home/Contact.cshtml
+++ b/Clinic Management website/Clinic Management website/Views/Home/Contact.cshtml
@@ -5,11 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
+    قوچان میدان آزادی..<br />
+    <abbr title="Phone">PN:</abbr>
     09389898999
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:seyyedmortezarazavi76@gmail.com">seyyedmortezarazavi76@gmail.com</a><br />
+    <strong>Support:</strong>   <br/>
+    <a href="mailto:seyyedmortezarazavi76@gmail.com">seyyedmortezarazavi76@gmail.com</a><br />
+    <a href="mailto:vahidsadrnia@gmail.com">vahidsadrnia@gmail.com</a><br />
 </address>
